# risq

./: .gitignore  .travis.yml  Cargo.toml  README.md  crates.js  dirs  help.html  index.html  rustdoc.sh  settings.html  source-files.js  src-files.js
.github/workflows/: ci.yml
docs/: search-index.js  settings.html
docs/risq/: all.html  fn.main.html  index.html  sidebar-items.js
examples/: FCIDUMP
examples/be/: FCIDUMP  in.json
examples/be2/: FCIDUMP  in.json
examples/c2/: FCIDUMP  in.json
examples/c2_vdz_casscf/: in.json
examples/c2_vdz_hf/: FCIDUMP  in.json
examples/ch_radical/: FCIDUMP  in.json
examples/f2/: FCIDUMP  in.json
examples/h2o/: FCIDUMP  in.json
examples/h2o_dimer/: FCIDUMP  in.json
examples/h5o2_plus/: in.json
examples/he2/: FCIDUMP  in.json
examples/li2/: FCIDUMP  in.json
examples/lih/: FCIDUMP  in.json
examples/n2/: FCIDUMP  in.json
examples/o2/: FCIDUMP  (+1 more)
notes/: paper.tex
risq/: all.html  constant.VERSION.html  index.html  macro.risq_bail!.html  macro.risq_bail.html  macro.risq_ensure!.html  macro.risq_ensure.html  sidebar-items.js
search.index/: 00395128ee.js  012ed83e9a.js  023fd6e376.js  028abcb8d2.js  044089af2b.js  09a52f4d92.js  09c5f5cd83.js  0c0a673979.js  0c19078a29.js  0c557b3b7d.js  0cd7b050f5.js  1106e63574.js  115c2f92b7.js  11de527eed.js  11f36f83bb.js  12022f99db.js  1296fc2d84.js  13167cab89.js  1340423273.js  1518d89229.js  16de0580f5.js  19fb245ecb.js  1aeb974e8e.js  1b348be026.js  1bdc044971.js  1c97f7553c.js  1d1e8225dc.js  1d29f50edd.js  1dd094a5af.js  1f206d3524.js  211235a4d7.js  212f4dcb29.js  2267f2c5fc.js  226c004c65.js  23f5b8d134.js  25e2932483.js  2689244311.js  276bfa4bb1.js  27b3861bd9.js  282f3a8fec.js  (+103 more)
src/: README.md  config.rs  context.rs  error.rs  lib.rs  main.rs  temporary_wrappers.rs
test_davidson/: Cargo.toml
test_sprs/: Cargo.toml
test_wf/: Cargo.toml  FCIDUMP
tests/: integration_test_suite.rs  test_unified_eigensolver.rs  test_unified_operations.rs
(+547 files in other folders)
