[package]
name = "esp"
version = "0.1.0"
authors = ["Adam Holmes <aaholmes@vt.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexical = "^5.1"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
nalgebra = "0.24.1"
eigenvalues = "0.4.0"
sprs = "0.10.0"
ndarray = "0.14.0"
itertools = "0.8.0"
vose-alias = "1.0.0"
