[package]
name = "esp"
version = "0.1.0"
authors = ["Adam Holmes <aaholmes@vt.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexical = "^5.1"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
nalgebra = { version = "0.26", features = ["rand"] }
eigenvalues = { path = "../eigenvalues" }
sprs = "0.10.0"
ndarray = "0.14.0"
itertools = "0.8.0"
vose-alias = { path = "../vose-alias" }
rand = "0.8.3"
rolling-stats = "0.4.0"
threads_pool = "0.2.6"

[profile.release]
debug = true
